--- a/_c8oProject/sequences/flowTestSequence.yaml
+++ b/_c8oProject/sequences/flowTestSequence.yaml
@@ -7,4 +7,14 @@
     ↓jSimpleSource [steps.SimpleSourceStep-1606228727320]: 
   ↓Call_Sequence [steps.SequenceStep-1606301775939]: 
     sourceSequence: C8oStudio.Execute
+  ↓jIfThenElse [steps.IfThenElseStep-1606398425655]: 
+    ↓jThen [steps.ThenStep-1606398427087]: 
+      ↓Complex [steps.XMLComplexStep-1606398437644]: 
+    ↓jElse [steps.ElseStep-1606398427089]: 
+      ↓Element [steps.XMLElementStep-1606398445250]: 
+      ↓jElement [steps.ElementStep-1606398451698]: 
+      ↓ccc [steps.XMLElementStep-1606398470347]: 
+  ↓toto [steps.ElementStep-1606398495418]: 
+    nodeName: toto
+  ↓Sort [steps.XMLSortStep-1606398502644]: 
 ↓jIf [steps.IfStep-1606228684326]: 
