--- a/_c8oProject/sequences/flowTestSequence.yaml
+++ b/_c8oProject/sequences/flowTestSequence.yaml
@@ -41,4 +41,5 @@
           ↓Element [steps.XMLElementStep-1607355169869]: 
             nodeName: false
     ↓Element [steps.XMLElementStep-1607428073693]: 
+    ↓Element1 [steps.XMLElementStep-1608043417011]: 
 ↓jIf [steps.IfStep-1606228684326]: 
